--- a/appx/templates/form.html
+++ b/appx/templates/form.html
@@ -13,7 +13,10 @@
         <input type="number" id="num1" name="num1" required>
         <label for="num2">Second Number:</label>
         <input type="number" id="num2" name="num2" required>
-        <button type="submit">Add</button>
+        <button type="submit" name="operation" value="add">Add</button>
+        <button type="submit" name="operation" value="subtract">subtract</button>
+        <button type="submit" name="operation" value="divide">divide</button>
+        <button type="submit" name="operation" value="multiply">multiply</button>
     </form>
 </body>
 </html>
